# segbot_arm

demos/door_manipulation_demo/: CMakeLists.txt  README.txt  package.xml
demos/door_manipulation_demo/action/: PushDoor.action
demos/door_manipulation_demo/launch/: door_manipulation_demo.launch
demos/door_manipulation_demo/src/: door_handle_detection.cpp  door_open.cpp  door_open_as.cpp  door_open_client.cpp
demos/door_manipulation_demo/srv/: door_perception.srv
demos/elevator_press_button/: CMakeLists.txt
demos/elevator_press_button/src/: color_filter.cpp  pcl_panel_filter.cpp  press_button.cpp  turn_correct_as.cpp  turn_correction.cpp
demos/elevator_press_button/srv/: color_perception.srv
demos/mimic_motion/src/: #agile_grasp_demo.cpp#
segbot_arm_manipulation/: package.xml
segbot_arm_manipulation/src/elevator_press_button/: CMakeLists.txt  package.xml
segbot_arm_manipulation/src/elevator_press_button/src/: pcl_panel_filter.cpp  press_button.cpp  see_button_opencv.cpp
segbot_arm_manipulation/src/elevator_press_button/srv/: color_perception.srv
segbot_arm_perception/: CMakeLists.txt
